# virtualRooms

./: .gitignore  README.md
virtualRooms/: CMakeLists.txt
virtualRooms/etc/: virtualroom.json
virtualRooms/src/: CMakeLists.txt  virtualroomsrv_App.cpp  virtualroomsrv_App.h  virtualroomsrv_config.h  virtualroomsrv_configreader.cpp  virtualroomsrv_configreader.h  virtualroomsrv_connectionutils.cpp  virtualroomsrv_connectionutils.h  virtualroomsrv_error.cpp  virtualroomsrv_error.h  virtualroomsrv_httpconnection.cpp  virtualroomsrv_httpconnection.h  virtualroomsrv_listener.cpp  virtualroomsrv_listener.h  virtualroomsrv_main.cpp  virtualroomsrv_websocketconnection.cpp  virtualroomsrv_websocketconnection.h
virtualRooms/src/frontend/: index.css  index.html  index.js
